<resources>
    <!--Label -->
    <string name="lblEmail">Email</string>
    <string name="lblPassword">Password (optional)</string>
    <string name="lblNombre">Nombre</string>
    <string name="lblApellido">Apellido</string>
    <string name="lblPin">Pin</string>
    <string name="lblPinRepeat">Reingrese Pin</string>
    <string name="lblGreet">Hola!</string>
    <string name="lblRequestPin">Olvidaste el pin?</string>
    <string name="lblNameAcount">Cuenta</string>
    <string name="lblDescripAcount">Descripcion</string>
    <string name="lblBalanceAcount">Balance</string>

    <!--Botton -->
    <string name="btnSignIn">SingIn</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnAddAccount">Agregar Cuenta</string>
    <string name="btnAddCard">Agregar Tarjeta</string>
    <string name="btnUpdCard">Modificar Tarjeta</string>
    <string name="btnUpdAccount">Modificar Tarjeta</string>
    <string name="btnAgregar">Agregar</string>

    <!--Titles -->
    <string name="app_name">Gestor de Gastos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="pin_activity">PIN</string>
    <string name="register_activity">Registrarse</string>
    <string name="Cuentas">Cuentas</string>
    <string name="Alta_Cuentas">Alta de cuentas</string>
    <string name="Alta_Tarjetas">Alta de tarjetas</string>
    <string name="Lista_Cuentas">Cuentas</string>


    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <!--Error -->
    <string name="error_invalid_email">Ingrese una dirección de email válida</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_name">Ingrese el nombre (al menos 3 caracteres)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_basic">Gestor de Gastos</string>
    <string name="title_activity_add_category">Agregar categoría</string>
    <string name="title_activity_add_expense">Agregar Gasto</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lblAddExpense">Agregar Gasto</string>
    <string name="hintDescriptionExpense">¿En qué gastaste?</string>
    <string name="lblPayedWith">Pagado con</string>
    <string name="lblAmount">Monto</string>
    <string name="lblDescription">Descripción</string>
    <string name="lblCategory">Categoría</string>

    <!--Menu -->
    <string name="menu_op_categories">Categorías</string>
    <string name="menu_op_account">Cuentas</string>
    <string name="menu_op_check">Registrar Gasto</string>
    <string name="menu_op_report">Reportes</string>
    <string name="menu_op_logout">Salir</string>
    <string name="menu_op_about">Acerca de GdG</string>
    <string name="txtDate">Fecha</string>

    <!-- -->
    <string name="hello_blank_fragment1">Evolución del gasto por categoría</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="resume_report_title">Resumen de Gastos</string>
    <string name="report_evolution_expenses">Evolucion de Gasto</string>
    <string name="report_expense_by_cat">Gasto por rubro</string>
    <string name="report_expense_by_date">Resumen de Movimientos</string>
    <string name="expense_x">Gasto x</string>
    <string name="title_activity_category_crud">Categorías</string>
    <string name="title_activity_account_crud">AccountCRUDActivity</string>
    <string name="title_activity_accouts">Accouts</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <string name="title_activity_card_crud">CardCRUDActivity</string>

    <!--Messages -->
    <string name="expense_saved_successfuly">Se guardó correctamente el gasto</string>
    <string name="category_saved_successfuly">Se guardó correctamente la categoría</string>
    <string name="message_complete_mandatory_fields">Complete los campos obligatorios</string>
    <string name="error_category_name_required">Ingrese el nombre de la categoría</string>
    <string name="error_amount_required">Ingrese el monto del gasto</string>
    <string name="error_amount_must_be_greater_than_zero">El monto ingresado debe ser mayor a cero</string>
    <string name="error_unable_to_send_pin_by_mail">Se produjo un error al intentar enviar el mail con el PIN</string>
    <string name="error_balance_required">Ingrese el balance de la Cuenta</string>
    <string name="success_pin_sent_to_mail">Hemos enviado el PIN a su dirección de correo</string>
    <string name="error_complete_pin">Complete el PIN</string>
    <string name="error_wrong_pin">PIN incorrecto</string>
    <string name="message_greet_user">Hola %1$s!</string>
    <string name="error_invalid_pin">Ingrese un PIN de 4 dígitos</string>
    <string name="error_repeat_pin">Reingrese el pin para verificar</string>
    <string name="error_pin_not_match">El PIN ingresado no coincide</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="lblAccountName">Cuenta</string>
    <string name="NewAccount">Nueva Cuenta</string>
    <string name="lblCreditCardName">Tarjeta</string>
    <string name="lblNewCreditCard">Nueva Tarjeta de Crédito</string>
    <string name="hntAccountName">Nombre de la Cuenta</string>
    <string name="hntAccountDesc">Sueldo, ahorros, etc…</string>
    <string name="hntCrCardName">Nombre de la tarjeta</string>
    <string name="hntCrCardDesc">Master del banco X…</string>
    <string name="msg_account_added">Se guardó la nueva cuenta</string>
    <string name="msg_account_deleted">Se ha eliminado la cuenta</string>
    <string name="msg_account_modifyed">Se ha modificado la cuenta</string>

    <string name="report_lin_from_date">Fecha Desde</string>
    <string name="report_lin_to_date">Fecha Hasta</string>
    <string name="report_expense_label">Gasto</string>
    <string name="filtros_txt_title">Filtros</string>
    <string name="filters_accept_button">Aceptar</string>
    <string name="fecha_header">Fecha</string>
    <string name="cat_header">Categoria</string>
    <string name="desc_header">Descripción</string>
    <string name="monto_header">Monto</string>
    <string name="menu_ctx_eliminate">Eliminar</string>
    <string name="menu_ctx_modify">Modificar</string>

    <string name="msg_no_expenses_recorded">No registra gastos</string>
    <string name="preffix_cash">$ %1$s</string>
    <string name="menu_op_transfer">Transferencias</string>
    <string name="title_activity_transfer">Transferencias</string>
    <string name="lblOrigin">Origen</string>
    <string name="lblDestination">Destino</string>
    <string name="lblAddTransference">Agregar transferencia</string>
    <string name="hintDescriptionTrf">Sueldo, préstamo…</string>
    <string name="title_activity_add_transfer">Nueva Transferencia</string>
    <string name="error_trf_same_account">No se puede transferir hacia la misma cuenta (o si, pero no tiene sentido)</string>
    <string name="error_trf_amount_required">Ingrese el monto de la transferencia</string>
    <string name="lblInternalTransfer">Transferencia entre cuentas</string>
    <string name="fabTrfExternal">Depósito externo</string>
    <string name="fabtTrfPayCard">Pagar Tarjetas</string>
</resources>
