<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity">
    <item
        android:id="@+id/menu_categories"
        android:icon="@drawable/ic_category_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_op_categories"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_account"
        android:orderInCategory="100"
        android:icon="@drawable/ic_credit_card_black_24dp"
        android:title="@string/menu_op_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_report"
        android:icon="@drawable/ic_report_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_op_report"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_out"
        android:icon="@drawable/ic_exit_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_op_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_about"
        android:icon="@drawable/ic_about_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_op_about"
        app:showAsAction="never" />
</menu>
