<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AccountCRUDActivity">

    <TextView
        android:id="@+id/txtAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:gravity="right"
        android:text="@string/lblAccountName"
        app:layout_constraintEnd_toEndOf="@+id/txtDescrip"
        app:layout_constraintTop_toBottomOf="@+id/tituloCuenta" />

    <EditText
        android:id="@+id/lblAccountName"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:hint="@string/hntAccountName"
        app:layout_constraintBottom_toBottomOf="@+id/txtAccountName"
        app:layout_constraintStart_toStartOf="@+id/lblAccountDescrip"
        app:layout_constraintTop_toTopOf="@+id/txtAccountName" />

    <TextView
        android:id="@+id/txtDescrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="right"
        android:text="@string/lblDescripAcount"
        app:layout_constraintEnd_toEndOf="@+id/txtaccountBalance"
        app:layout_constraintTop_toBottomOf="@+id/txtAccountName" />

    <EditText
        android:id="@+id/lblAccountDescrip"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:selectAllOnFocus="false"
        android:hint="@string/hntAccountDesc"
        app:layout_constraintBottom_toBottomOf="@+id/txtDescrip"
        app:layout_constraintStart_toStartOf="@+id/lblAccountBalance"
        app:layout_constraintTop_toTopOf="@+id/txtDescrip" />

    <TextView
        android:id="@+id/txtaccountBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:gravity="right"
        android:text="@string/lblBalanceAcount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescrip" />

    <EditText
        android:id="@+id/lblAccountBalance"
        android:layout_width="220dp"
        android:layout_height="39dp"
        android:layout_marginEnd="60dp"
        android:inputType="numberDecimal"
        android:hint="0.00"
        app:layout_constraintBottom_toBottomOf="@+id/txtaccountBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtaccountBalance" />

    <Button
        android:id="@+id/btnAddAcount"
        android:layout_width="188dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnAddAcount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAccountBalance"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/tituloCuenta"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="96dp"
        android:gravity="center"
        android:text="@string/NewAccount"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>