<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="60dp"
    tools:context=".view.ReportLinealFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/resume_report_title" />


            <LinearLayout
                android:id="@+id/header_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_fecha"
                    android:layout_width="47dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="10"
                    android:paddingLeft="0dp"
                    android:text="@string/fecha_header"
                    android:textAlignment="viewStart"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/text_cat"
                    android:layout_width="6dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="10"
                    android:text="@string/cat_header"
                    android:textAlignment="viewStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_desc"
                    android:layout_width="47dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="10"
                    android:text="@string/desc_header"
                    android:textAlignment="viewStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_mount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="10"
                    android:text="@string/monto_header"
                    android:textAlignment="viewStart"
                    android:textSize="15sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="280dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/colors_cont"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/filtros_txt_title"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/filtro_cat"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblDateTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/report_lin_from_date"
                    app:layout_constraintEnd_toEndOf="@+id/lblCategory"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txtDateFrom"
                    android:layout_width="96dp"
                    android:layout_height="35dp"
                    android:clickable="true"

                    android:focusable="false"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:maxLines="1"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lblDateTo"
                    app:layout_constraintStart_toStartOf="@+id/spnCateogry"
                    app:layout_constraintTop_toTopOf="@+id/lblDateTo" />

                <TextView
                    android:id="@+id/lblDateFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/report_lin_to_date"
                    app:layout_constraintEnd_toEndOf="@+id/lblCategory"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txtDateTo"
                    android:layout_width="96dp"
                    android:layout_height="35dp"
                    android:clickable="true"

                    android:focusable="false"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:maxLines="1"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lblDateTo"
                    app:layout_constraintStart_toStartOf="@+id/spnCateogry"
                    app:layout_constraintTop_toTopOf="@+id/lblDateTo" />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/button_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filters_accept_button" />

    </LinearLayout>


</FrameLayout>